# Club-5-to-7-Telegram-Bot

./: README.md  bot.py  pyproject.toml
