[tool.poetry]
name = "club-5-to-7-bot"
version = "0.1.0"
description = "Telegram bot for movie club"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-telegram-bot = "20.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
