[tool.poetry]
name = "club-5-to-7-bot"
version = "0.1.0"
description = "Telegram bot for movie club"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-telegram-bot = "20.8"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9" # Add this line for PostgreSQL support

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"